# autohooks-plugin-autopep8

./: .travis.yml  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
autohooks/plugins/autopep8/: __init__.py  autopep8.py
tests/: test_config_1.toml
